force-app/main/default/objects/Sales_Order_Line_Items__c/Sales_Order_Line_Items__c.object-meta.xml
<CustomObject>
    <label>Sales Order Line Items</label>
    <nameField>
        <displayFormat>A-{00000}</displayFormat>
        <label>Sales Order Line Items Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Order Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>