force-app/main/default/objects/Sales_Order_Line_Items__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Sales Order Line Items</relationshipLabel>
    <relationshipName>Sales_Order_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>