force-app/main/default/objects/Sales_Order_Line_Items__c/fields/Product_image_url__c.field-meta.xml
<CustomField>
    <fullName>Product_image_url__c</fullName>
    <label>Product image url</label>
    <type>Url</type>
</CustomField>