force-app/main/default/objects/Sales_Order_Line_Items__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Sales_Order__c</columns>
    <columns>Product__c</columns>
    <columns>Product_Name__c</columns>
    <columns>Product_Code__c</columns>
    <columns>Product_Description__c</columns>
    <columns>Product_Type__c</columns>
    <columns>Quantity__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>